# dissectML

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DissectML.html  InsightML.html  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/docs/: changelog.md  index.md
docs/docs/api/: index.md
docs/docs/user-guide/: intelligence.md  model-battle.md  reports.md
examples/: 01_quickstart.ipynb  02_deep_eda.ipynb  04_full_pipeline.ipynb
notebooks/: dissectml_demo.ipynb
src/dissectml/: __init__.py  _config.py  _lazy.py  _sampling.py  _types.py  exceptions.py
src/dissectml/battle/: result.py  runner.py  tuner.py
src/dissectml/core/: base.py  data_container.py  pipeline.py  validators.py
src/dissectml/datasets/: __init__.py
src/dissectml/eda/: _base.py  result.py
src/dissectml/intelligence/: result.py
src/dissectml/report/: builder.py  html_renderer.py  pdf_renderer.py
src/dissectml/report/assets/: script.js  style.css
src/dissectml/report/sections/: __init__.py
src/dissectml/report/templates/: base.html.j2
src/dissectml/viz/: __init__.py  charts.py  display.py  theme.py
src/insightml/: __init__.py  _config.py  _io.py  _lazy.py  _sampling.py  _types.py  exceptions.py
src/insightml/battle/: __init__.py  catalog.py  param_grids.py  preprocessing.py  registry.py  result.py  runner.py  tuner.py
src/insightml/compare/: __init__.py  comparator.py  curves.py  error_analysis.py  metrics_table.py  pareto.py  shap_compare.py  significance.py
src/insightml/core/: __init__.py  base.py  data_container.py  pipeline.py  progress.py  validators.py
src/insightml/datasets/: __init__.py
src/insightml/eda/: __init__.py  _base.py  result.py
src/insightml/intelligence/: __init__.py  feature_importance.py  leakage.py  multicollinearity.py  readiness.py  recommendations.py  result.py
src/insightml/report/: __init__.py  builder.py  html_renderer.py  narrative.py  pdf_renderer.py
src/insightml/viz/: __init__.py  charts.py  display.py  theme.py
tests/: conftest.py  test_api.py  test_sampling.py
tests/battle/: test_preprocessing.py  test_registry.py  test_runner.py
tests/compare/: test_error_analysis.py  test_significance.py
tests/core/: test_pipeline.py
tests/intelligence/: test_leakage.py  test_readiness.py
tests/report/: test_html_renderer.py
