[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insightml"
dynamic = ["version"]
description = "The missing middle layer between EDA and AutoML — deep data understanding meets model comparison"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Rupesh Bharambe", email = "rupeshbharambe2004@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["machine-learning", "eda", "automl", "data-science", "model-comparison"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "plotly>=5.18",
    "jinja2>=3.1",
    "joblib>=1.3",
    "tqdm>=4.65",
    "statsmodels>=0.14",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
boost = ["xgboost>=2.0", "lightgbm>=4.0", "catboost>=1.2"]
explain = ["shap>=0.44"]
report = ["weasyprint>=60.0", "kaleido>=0.2"]
scale = ["polars>=0.20", "optuna>=3.4"]
full = ["insightml[boost,explain,report,scale]"]
dev = [
    "insightml[full]",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "hatchling",
]

[project.urls]
Homepage = "https://github.com/rupeshbharambe24/insightml"
Documentation = "https://insightml.readthedocs.io"
Repository = "https://github.com/rupeshbharambe24/insightml"
"Bug Tracker" = "https://github.com/rupeshbharambe24/insightml/issues"

[tool.hatch.version]
path = "src/insightml/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/insightml"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/insightml"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
